--- a/index.html
+++ b/index.html
@@ -160,6 +160,35 @@
         </div>
 
 
+<!-- 
+        -----call to actiomn----- -->
+        <section class="ctn">
+            <h1>Enroll For Various Online Courses</BR> Any Where From The World</h1>
+            <a class="hero-btn" href=""> CONTAC US</a>
+        </section>
+
+
+        <!-- ----footer----- -->
+
+        <section class="footer">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                 Dolores cupiditate vero repellat aut deleniti debitis adipisci pariatur sunt!
+                  Voluptate cupiditate doloremque et porro
+                 architecto odio, corrupti dolores consequatur ipsam hic?
+
+            </p>
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                
+            </div>
+            <p>made with <i class="fa-solid fa-copyright"></i> Moha Prog </p>
+        </section>
+
+
 
 
 
